--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
+  "engines":{
+    "node":"14.12.0",
+  }
   "name": "nodeApi",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "scripts":{
     "dev":"nodemon server.js"    
