--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "engines":{
-    "node":"14.12.0"
+  "engines": {
+    "node": "14.12.0"
   },
   "name": "nodeApi",
   "version": "1.0.0",
   "main": "server.js",
   "license": "MIT",
-  "scripts":{
-    "dev":"nodemon server.js"
+  "scripts": {
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "puppeteer": "^5.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
