--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "puppeteer": "^5.3.1"
   },
